added rebar deps

--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,9 @@
 {app_bin, []}.
 {deps_dir, ["deps"]}.
 {deps, [
+  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
+  {mimetypes, ".*", {git, "git://github.com/mhishami/mimetypes.git", "master"}},
+  {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "master"}}
 ]}.
 {edoc_opts, [{doclet, edown_doclet}]}.
 {sub_dirs, []}.
