added json and session server

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,8 @@
 {deps, [
   {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
   {mimetypes, ".*", {git, "git://github.com/mhishami/mimetypes.git", "master"}},
-  {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "master"}}
+  {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "master"}},
+  {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}}
 ]}.
 {edoc_opts, [{doclet, edown_doclet}]}.
 {sub_dirs, []}.
