--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,8 @@
   {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
   {mimetypes, ".*", {git, "git://github.com/mhishami/mimetypes.git", "master"}},
   {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "master"}},
-  {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}}
+  {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}},
+  {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}}  
 ]}.
 {edoc_opts, [{doclet, edown_doclet}]}.
 {sub_dirs, []}.
