fixed the version no

--- a/rebar.config
+++ b/rebar.config
@@ -8,8 +8,8 @@
 {app_bin, []}.
 {deps_dir, ["deps"]}.
 {deps, [
-  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
-  {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "master"}},
+  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "1.0.3"}},
+  {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "0.10.0"}},
   {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}},
   {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}}  
 ]}.
