--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
 {deps_dir, ["deps"]}.
 {deps, [
   {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "1.0.3"}},
-  {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "0.10.0"}},
+  {erlydtl, ".*", {git, "git://github.com/ulfa/erlydtl.git"}}, 
   {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}},
   {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}}  
 ]}.
