Created new script, and app to jumpstart the development

--- a/example/foo/Makefile
+++ b/example/foo/Makefile
@@ -3,5 +3,6 @@ DEPS = tuah sync cowboy erlydtl jsx lager cowlib ranch bson pbkdf2 mongodb
 
 dep_tuah = git https://github.com/mhishami/tuah.git master
 dep_mongodb = git https://github.com/comtihon/mongodb-erlang.git master
+dep_pbkdf2 = git https://github.com/basho/erlang-pbkdf2.git 2.0.0
 
 include erlang.mk
